--- a/common.blocks/color/__image/color__image.post.css
+++ b/common.blocks/color/__image/color__image.post.css
@@ -18,14 +18,8 @@
     &_phantom {
       background: var(--color-phantom);
     }
-    &_radical {
-      background: var(--color-radical);
-    }
     &_path {
       background: var(--color-path);
-    }
-    &_source {
-      background: var(--color-source);
     }
     /* Базовые цвета */
 
@@ -53,13 +47,19 @@
     }
     &_success {
       background: var(--color-success);
-    }
+	}
+	&_warning {
+		background: var(--color-warning);
+	}
     &_alert {
       background: var(--color-alert);
     }
     &_normal {
       background: var(--color-normal);
-    }
+	}
+	&_system {
+		background: var(--color-system);
+	}
     &_ghost {
       background: var(--color-ghost);
     }
@@ -67,18 +67,17 @@
       background: var(--color-default);
       box-sizing: border-box;
       border: 1px solid var(--color-border);
-    }
-    &_default-android {
-      background: var(--color-default-android);
-      box-sizing: border-box;
-    }
+	}
+	&_soft {
+		background: var(--color-soft);
+		box-sizing: border-box;
+		border: 1px solid var(--color-border);
+	  }
     &_tone {
       background: var(--color-tone);
-      box-sizing: border-box;
     }
     &_disable {
       background: var(--color-disable);
-      box-sizing: border-box;
     }
 
     &_typo-primary {
@@ -107,123 +106,16 @@
     &_typo-ghost {
       background: var(--color-typo-ghost);
     }
-    &_typo-income {
-      background: var(--color-typo-income);
-    }
-    &_typo-letter {
-      background: var(--color-typo-letter);
-    }
 
     &_link {
       background: var(--color-link);
-    }
-    &_link-external {
-      background: var(--color-link-external);
     }
     &_link-hover {
       background: var(--color-link-hover);
     }
     &_link-minor {
       background: var(--color-link-minor);
-    }
-
-    /* Цвета проектов */
-    /*
-    &_default {
-      background: $color-default;
-    }
-    &_inverse {
-      background: $color-inverse;
-    }
-    &_hover {
-      background: $color-hover;
-    }
-    &_press {
-      background: $color-press;
-    }
-    &_action {
-      background: $color-action;
-    }
-    &_action-hover {
-      background: $color-action-hover;
-    }
-    &_action-focus {
-      background: $color-action-focus;
-    }
-    &_action-press {
-      background: $color-action-press;
-    }
-    &_check {
-      background: $color-check;
-    }
-    &_check-press {
-      background: $color-check-press;
-    }
-    &_disable {
-      background: $color-disable;
-    }
-    &_disable-check {
-      background: $color-disable-check;
-    }
-    &_border-disable {
-      background: $color-border-disable;
-    }
-    &_border {
-      background: $color-border;
-    }
-    &_border-hover {
-      background: $color-border-hover;
-    }
-    &_border-press {
-      background: $color-border-press;
-    }
-    &_border-focus {
-      background: $color-border-focus;
-    }
-    &_border-check {
-      background: $color-border-check;
-    }
-
-    &_border-check-press {
-      background: $color-border-check-press;
-    }
-    &_border-check-hover {
-      background: $color-border-check-hover;
-    }
-    &_border-focus {
-      background: $color-border-focus;
-    }
-    &_color-typo-primary {
-      background: $color-typo-primary;
-    }
-    &_typo-inverse {
-      background: $color-typo-inverse;
-    }
-    &_typo-placeholder {
-      background: $color-typo-placeholder;
-    }
-
-    &_link {
-      background: $color-link;
-    }
-    &_link-hover {
-      background: $color-link-hover;
-    }
-    &_link-ghost {
-      background: $color-link-ghost;
-    }
-    &_link-ghost-hover {
-      background: $color-link-ghost-hover;
-    }
-    &_link-visited {
-      background: $color-link-visited;
-    }
-    &_typo-disable {
-      background: $color-typo-disable;
-    }
-    &_typo-inverse-disable {
-      background: $color-typo-inverse-disable;
-    }
-    */
+	}
+	
   }
 }
