--- a/common.blocks/event/event.post.css
+++ b/common.blocks/event/event.post.css
@@ -4,6 +4,7 @@
 	background-color: var(--color-inverse);
 	text-align: center;
 	overflow: hidden;
+	position: relative;
 	&__speaker {
 		height: 60px;
 		width: 110px;
