--- a/common.blocks/foot/foot.post.css
+++ b/common.blocks/foot/foot.post.css
@@ -1,4 +1,16 @@
 .foot {
 	padding: var(--space-xxxl) 0;
-	background-color: var(--color-default);
+	border-top: 1px solid var(--color-border);
+
+	&__container {
+		display: flex;
+		flex-flow: row nowrap;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	&__social {
+		display: flex;
+		flex-flow: row nowrap;
+	}
 }
