--- a/common.blocks/new-menu/new-menu.post.css
+++ b/common.blocks/new-menu/new-menu.post.css
@@ -66,7 +66,7 @@
 		display: flex;
 		flex-flow: column;
 		background: var(--color-default);
-		box-shadow: 0 1px 4px rgba(0,0,0,0.12), 0 8px 8px -3px rgba(0,0,0,0.06);
+		box-shadow: 0 0px 2px rgba(0,0,0,0.03), 0 1px 4px rgba(0,0,0,0.12), 0 12px 8px -3px rgba(0,0,0,0.06);
 		right: -12px;
 		top: 100%;
 		transform: translateY(var(--space-xs));
