--- a/common.blocks/demo/__menu/demo__menu.post.css
+++ b/common.blocks/demo/__menu/demo__menu.post.css
@@ -23,7 +23,7 @@
 			text-decoration: none;
 		}
 		& a:hover {
-			color: var(--color-alert);
+			color: var(--color-typo-alert);
 		}
 	}
 	&__menu-item-row {
