--- a/common.blocks/color/__image/color__image.post.css
+++ b/common.blocks/color/__image/color__image.post.css
@@ -1,121 +1,121 @@
 .color__image {
-  width: 120px;
-  height: 72px;
-  margin-bottom: var(--space-xs);
-  
-  &_color {
-    /* Базовые цвета */
-    &_base {
-      background: var(--color-base);
-    }
-    &_essential {
-      background: var(--color-essential);
-      border: 1px solid var(--color-border);
-    }
-    &_project {
-      background: var(--color-project);
-    }
-    &_phantom {
-      background: var(--color-phantom);
-    }
-    &_path {
-      background: var(--color-path);
-    }
-    /* Базовые цвета */
+	width: 120px;
+	height: 72px;
+	margin-bottom: var(--space-xs);
+	
+	&_color {
+		/* Базовые цвета */
+		&_base {
+			background: var(--color-base-base);
+		}
+		&_essential {
+			background: var(--color-base-essential);
+			border: 1px solid var(--color-bg-border);
+		}
+		&_project {
+			background: var(--color-base-project);
+		}
+		&_phantom {
+			background: var(--color-base-phantom);
+		}
+		&_path {
+			background: var(--color-base-path);
+		}
+		/* Базовые цвета */
 
-    /* Цвета блоков */
-    &_brand {
-      background: var(--color-brand);
-    }
-    &_action {
-      background: var(--color-action);
-    }
-    &_selection {
-      background: var(--color-selection);
-    }
-    &_hover {
-      background: var(--color-hover);
-    }
-    &_inverse {
-      background: var(--color-inverse);
-    }
-    &_border {
-      background: var(--color-border);
-    }
-    &_border-control {
-      background: var(--color-border-control);
-    }
-    &_success {
-      background: var(--color-success);
-	}
-	&_warning {
-		background: var(--color-warning);
-	}
-    &_alert {
-      background: var(--color-alert);
-    }
-    &_normal {
-      background: var(--color-normal);
-	}
-	&_system {
-		background: var(--color-system);
-	}
-    &_ghost {
-      background: var(--color-ghost);
-    }
-    &_default {
-      background: var(--color-default);
-      box-sizing: border-box;
-      border: 1px solid var(--color-border);
-	}
-	&_soft {
-		background: var(--color-soft);
-		box-sizing: border-box;
-		border: 1px solid var(--color-border);
-	  }
-    &_tone {
-      background: var(--color-tone);
-    }
-    &_disable {
-      background: var(--color-disable);
-    }
+		/* Цвета блоков */
+		&_brand {
+			background: var(--color-bg-brand);
+		}
+		&_action {
+			background: var(--color-bg-action);
+		}
+		&_selection {
+			background: var(--color-bg-selection);
+		}
+		&_hover {
+			background: var(--color-bg-hover);
+		}
+		&_inverse {
+			background: var(--color-bg-inverse);
+		}
+		&_border {
+			background: var(--color-bg-border);
+		}
+		&_border-control {
+			background: var(--color-bg-border-control);
+		}
+		&_success {
+			background: var(--color-bg-success);
+		}
+		&_warning {
+			background: var(--color-bg-warning);
+		}
+		&_alert {
+			background: var(--color-bg-alert);
+		}
+		&_normal {
+			background: var(--color-bg-normal);
+		}
+		&_system {
+			background: var(--color-bg-system);
+		}
+		&_ghost {
+			background: var(--color-bg-ghost);
+		}
+		&_default {
+			background: var(--color-bg-default);
+			box-sizing: border-box;
+			border: 1px solid var(--color-bg-border);
+		}
+		&_soft {
+			background: var(--color-bg-soft);
+			box-sizing: border-box;
+			border: 1px solid var(--color-bg-border);
+		}
+		&_tone {
+			background: var(--color-bg-tone);
+		}
+		&_disable {
+			background: var(--color-bg-disable);
+		}
 
-    &_typo-primary {
-      background: var(--color-typo-primary);
-    }
-    &_typo-secondary {
-      background: var(--color-typo-secondary);
-    }
-    &_typo-success {
-      background: var(--color-typo-success);
-    }
-    &_typo-alert {
-      background: var(--color-typo-alert);
-    }
-    &_typo-promo {
-      background: var(--color-typo-promo);
-    }
-    &_typo-inverse {
-      background: var(--color-typo-inverse);
-      box-sizing: border-box;
-      border: 1px solid $color-border;
-    }
-    &_typo-disable {
-      background: var(--color-typo-disable);
-    }
-    &_typo-ghost {
-      background: var(--color-typo-ghost);
-    }
+		&_typo-primary {
+			background: var(--color-typo-primary);
+		}
+		&_typo-secondary {
+			background: var(--color-typo-secondary);
+		}
+		&_typo-success {
+			background: var(--color-typo-success);
+		}
+		&_typo-alert {
+			background: var(--color-typo-alert);
+		}
+		&_typo-promo {
+			background: var(--color-typo-promo);
+		}
+		&_typo-inverse {
+			background: var(--color-typo-inverse);
+			box-sizing: border-box;
+			border: 1px solid var(--color-bg-border);
+		}
+		&_typo-disable {
+			background: var(--color-typo-disable);
+		}
+		&_typo-ghost {
+			background: var(--color-typo-ghost);
+		}
 
-    &_link {
-      background: var(--color-link);
-    }
-    &_link-hover {
-      background: var(--color-link-hover);
-    }
-    &_link-minor {
-      background: var(--color-link-minor);
+		&_link {
+			background: var(--color-link);
+		}
+		&_link-hover {
+			background: var(--color-link-hover);
+		}
+		&_link-minor {
+			background: var(--color-link-minor);
 	}
 	
-  }
+	}
 }
