--- a/common.blocks/foot/foot.post.css
+++ b/common.blocks/foot/foot.post.css
@@ -1,6 +1,6 @@
 .foot {
 	padding: var(--space-xxxl) 0;
-	border-top: 1px solid var(--color-border);
+	border-top: 1px solid var(--color-bg-border);
 
 	&__container {
 		display: flex;
