--- a/common.blocks/illustration-item/illustration-item.post.css
+++ b/common.blocks/illustration-item/illustration-item.post.css
@@ -3,14 +3,14 @@
   &__view {
     width: 552px;
     height: 380px;
-    background-color: var(--color-ghost);
+    background-color: var(--color-bg-ghost);
     margin-bottom: $space-l;
     display: flex;
     justify-content: center;
     align-items: center;
     &_view {
       &_default {
-        background-color: var(--color-default);
+        background-color: var(--color-bg-default);
       }
       &_inverse {
         background-color: #000;
