--- a/common.blocks/menu/menu.post.css
+++ b/common.blocks/menu/menu.post.css
@@ -4,4 +4,17 @@
 		background: var(--color-bg-ghost);
 		margin-bottom: var(--space-xs);
 	}
+	&__menu-image {
+		height: 240px;
+		background: #1a1a1a;
+		&_size {
+			&_unfold {
+				width: var(--menu-unfold);
+			}
+			&_fold {
+				width: var(--menu-fold);
+			}
+		}
+	}
 }
+
