updates the layouts page

--- a/common.blocks/layout-item/layout-item.post.css
+++ b/common.blocks/layout-item/layout-item.post.css
@@ -1,7 +1,8 @@
 .layout-item {
-   margin-bottom: var(--space-xxxl);
   &__view {
-    margin-bottom: var(--space-l);
-    background-repeat: no-repeat;
+    margin-bottom: var(--space-s);
+  }
+  .image {
+    width: 100%;
   }
 }
