--- a/common.blocks/new-menu/new-menu.post.css
+++ b/common.blocks/new-menu/new-menu.post.css
@@ -17,7 +17,9 @@
 
 	&__logo {
 		display: block;
-		& > img { display: block; }
+		width: 96px;
+		height: 32px;
+		background: #000;
 	}
 
 	&__nav {
