Fix links, content and wrappers

--- a/common.blocks/demo/demo.post.css
+++ b/common.blocks/demo/demo.post.css
@@ -1,5 +1,11 @@
 .demo {
-	padding-right: 70px;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+}
+
+html {
+	height: 100%;
 }
 
 @media screen and (max-width: 1199px) {
