--- a/common.blocks/article/article.post.css
+++ b/common.blocks/article/article.post.css
@@ -1,17 +1,10 @@
 .article {
 	height: 460px;
-	background-color: black;
+	background: var(--color-bg-default);
 	display: block;
 	overflow: hidden;
-	&_view {
-		&_habr {
-			background: #6a858c;
-		}
-		&_codepen {
-			background: #191919;
-		}
-		&_ui8 {
-			background: #232323;
-		}
+	transition-duration: 500ms;
+	&:hover {
+		background: rgb(0, 123, 255);
 	}
 }
