--- a/common.blocks/page/page.post.css
+++ b/common.blocks/page/page.post.css
@@ -1,16 +1,7 @@
 .page {
-  &_vertical-align {
-    &_center {
-      flex-direction: column;
-      height: 100%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-  }
-  &_type {
-  	&_full-screen {
-  		min-height: 100vh !important;
-  	}
-  }
+	height: 100%;
+}
+
+html {
+	height: 100%;
 }
