--- a/common.blocks/docsify/docsify.post.css
+++ b/common.blocks/docsify/docsify.post.css
@@ -226,7 +226,7 @@ main.hidden {
 	overflow-y: auto;
 	padding: 40px 0 0;
 	position: absolute;
-	top: 0;
+	top: 60px;
 	bottom: 0;
 	left: 0;
 	transition: transform .25s ease-out;
@@ -331,7 +331,7 @@ body.sticky .sidebar, body.sticky .sidebar-toggle {
 }
 
 .content {
-	padding-top: 60px;
+	padding-top: 30px;
 	position: absolute;
 	top: 0;
 	right: 0;
